--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "metalsmith-react",
-  "description": "A metalsmith plugin for react templates.",
+  "name": "metalsmith-react-templates",
+  "description": "A metalsmith plugin to render files using ReactJS based templates",
   "version": "0.1.0",
   "license": "MIT",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yeojz/metalsmith-react-templates.git"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
   "devDependencies": {
+    "assert-dir-equal": "^1.0.1",
+    "metalsmith": "^1.3.0",
+    "mocha": "^2.1.0"
   },
   "dependencies": {
     "async": "^0.9.0",
