--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "type": "git",
     "url": "https://github.com/yeojz/metalsmith-react-templates.git"
   },
+  "keywords": [
+    "metalsmith",
+    "static-site",
+    "generator",
+    "react",
+    "reactjs",
+    "template",
+    "engine",
+    "view"
+  ],  
   "scripts": {
     "test": "mocha"
   },
@@ -20,9 +30,7 @@
     "async": "^0.9.0",
     "debug": "^2.1.1",
     "extend": "^2.0.0",
-    "lodash": "^3.1.0",
     "lodash.omit": "^3.0.0",
-    "lodash.template": "^3.0.1",
     "react": "^0.12.2",
     "react-tools": "^0.12.2"
   }
