--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "metalsmith-react-templates",
   "description": "A metalsmith plugin to render files using ReactJS based templates",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "main": "lib/index.js",
   "repository": {
@@ -31,6 +31,7 @@
     "debug": "^2.1.1",
     "extend": "^2.0.0",
     "lodash.omit": "^3.0.0",
+    "multimatch": "^2.0.0",
     "react": "^0.12.2",
     "react-tools": "^0.12.2"
   }
