--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "metalsmith-react-templates",
+  "version": "0.1.4",  
   "description": "A metalsmith plugin to render files using ReactJS based templates",
-  "version": "0.1.4",
-  "license": "MIT",
   "main": "lib/index.js",
+  "scripts": {
+    "test": "mocha"
+  },  
   "repository": {
     "type": "git",
     "url": "https://github.com/yeojz/metalsmith-react-templates.git"
@@ -18,9 +20,12 @@
     "engine",
     "view"
   ],
-  "scripts": {
-    "test": "mocha"
+  "author": "Gerald Yeo <contact@fusedthought.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yeojz/metalsmith-react-templates/issues"
   },
+  "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "metalsmith": "^1.3.0",
