--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "metalsmith-react-templates",
-  "version": "0.1.8",  
+  "version": "0.1.9",
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha"
-  },  
+    "test": "mocha && jshint ./lib/*"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/yeojz/metalsmith-react-templates.git"
@@ -29,7 +29,8 @@
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "metalsmith": "^1.3.0",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "mocha-jshint": "0.0.9"
   },
   "dependencies": {
     "async": "^0.9.0",
