--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
+    "jshint": "^2.6.0",
     "metalsmith": "^1.3.0",
     "mocha": "^2.1.0",
     "mocha-jshint": "0.0.9"
