--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha && jshint ./lib/*"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,6 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
-    "jshint": "^2.6.0",
     "metalsmith": "^1.3.0",
     "mocha": "^2.1.0",
     "mocha-jshint": "0.0.9"
