--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
+    "babel-eslint": "^1.0.12",
+    "eslint": "^0.15.1",
     "exec-sync": "^0.1.6",
-    "jsxhint": "^0.12.1",
     "metalsmith": "^1.3.0",
-    "mocha": "^2.1.0",
-    "mocha-jshint": "0.0.9"
+    "mocha": "^2.1.0"
   },
   "dependencies": {
     "async": "^0.9.0",
