--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-react-templates",
-  "version": "0.1.10",
+  "version": "0.2.0",
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
@@ -28,7 +28,6 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
-    "babel-eslint": "^1.0.12",
     "eslint": "^0.15.1",
     "exec-sync": "^0.1.6",
     "metalsmith": "^1.3.0",
@@ -36,11 +35,12 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "babel-core": "^5.2.17",
     "debug": "^2.1.1",
     "extend": "^2.0.0",
     "lodash.omit": "^3.0.0",
     "multimatch": "^2.0.0",
-    "react": "^0.12.2",
-    "react-tools": "^0.12.2"
+    "react": "^0.13.3",
+    "react-tools": "^0.13.3"
   }
 }
