--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,14 @@
 {
   "env": {
+    "es6": true,
     "node": true,
     "mocha": true
   },
+
+  "ecmaFeatures": {
+    "modules": true
+  },
+
   "rules": {
     "quotes": [2, "single"],
     "space-in-brackets": [2, "never"],
