--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "commit": "npm run compile && git commit -a",
+    "compile": " babel ./src/v2.js --out-file ./lib/index.js",
+    "publish": "npm run compile && npm run test && npm publish"
   },
   "repository": {
     "type": "git",
@@ -28,18 +31,17 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
-    "eslint": "^0.15.1",
+    "eslint": "^0.21.1",
     "exec-sync": "^0.1.6",
-    "metalsmith": "^1.3.0",
-    "mocha": "^2.1.0"
+    "metalsmith": "^1.7.0",
+    "mocha": "^2.2.5"
   },
   "dependencies": {
     "async": "^0.9.0",
     "babel-core": "^5.2.17",
     "debug": "^2.1.1",
-    "extend": "^2.0.0",
-    "lodash.omit": "^3.0.0",
     "multimatch": "^2.0.0",
+    "object-assign": "^2.0.0",
     "react": "^0.13.3",
     "react-tools": "^0.13.3"
   }
