--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
+    "postinstall": "npm run build",
     "test-publish": "npm run test && npm publish",
     "test": "npm run build && mocha"
   },
@@ -30,7 +31,6 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
-    "babel": "^5.4.3",
     "eslint": "^0.21.1",
     "exec-sync": "^0.1.6",
     "metalsmith": "^1.7.0",
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "babel-core": "^5.2.17",
+    "babel": "^5.4.3",
     "debug": "^2.2.0",
     "multimatch": "^2.0.0",
     "object-assign": "^2.0.0",
