--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "eslint": "^0.21.1",
-    "exec-sync": "^0.1.6",
     "metalsmith": "^1.7.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "sync-exec": "^0.5.0"
   },
   "dependencies": {
     "async": "^0.9.0",
