--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
-    "postinstall": "npm run build",
-    "prepublish": "npm run test",
+    "prepublish": "npm run build",
     "pretest": "npm run build",
     "test": "mocha"
   },
@@ -32,6 +31,7 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
+    "babel": "^5.6.7",
     "eslint": "^0.21.1",
     "metalsmith": "^1.7.0",
     "mocha": "^2.2.5",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "babel": "^5.4.3",
+    "babel-core": "^5.6.7",
     "debug": "^2.2.0",
     "multimatch": "^2.0.0",
     "object-assign": "^2.0.0",
