--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
+    "clean": "rm -rf ./lib",
     "prepublish": "npm run build",
     "pretest": "npm run build",
     "test": "mocha"
