--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
+  "parser": "babel-eslint",
+
   "env": {
     "es6": true,
     "node": true,
@@ -6,12 +8,33 @@
   },
 
   "ecmaFeatures": {
+    "generators": true,
+    "jsx": true,
     "modules": true
   },
 
+  "plugins": [
+    "react"
+  ],
+
   "rules": {
+    "no-underscore-dangle": 0,
     "quotes": [2, "single"],
     "space-in-brackets": [2, "never"],
-    "no-underscore-dangle": [0]
+    "strict": 0,
+
+
+    "react/display-name": 0,
+    "react/jsx-quotes": [1, "single"],
+    "react/jsx-no-undef": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 1,
+    "react/prop-types": [1, {ignore: ["children"]}],
+    "react/react-in-jsx-scope": 1,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 1
   }
 }
