--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "babel": "^5.6.7",
+    "babel-eslint": "^4.0.10",
     "eslint": "^0.21.1",
+    "eslint-plugin-react": "^3.2.3",
     "metalsmith": "^1.7.0",
     "mocha": "^2.2.5",
     "sync-exec": "^0.5.0"
