--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
     "metalsmith": "^2.1.0",
+    "mocha": "^2.4.5",
     "sync-exec": "^0.6.2"
   },
   "dependencies": {
