--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,11 @@
 test:
   override:
-    - nvm use 0.12 && npm run test
     - nvm use 4.2.2 && npm run test
     - nvm use 5.1 && npm run test
+deployment:
+  production:
+    branch: master
+    commands:
+      - ./npm.sh
+      - npm publish
+      - npm logout
