--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-react-templates",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
@@ -31,6 +31,11 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "babel-cli": "^6.5.1",
+    "babel-eslint": "^4.1.8",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
@@ -42,14 +47,11 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "babel-core": "^6.5.1",
-    "babel-eslint": "^4.1.8",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "debug": "^2.2.0",
-    "multimatch": "^2.1.0",
+    "multimatch": "^2.1.0"
+  },
+  "peerDependencies": {
+    "babel-core": "^6.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
