--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
     "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.1",
     "babel-eslint": "^4.1.8",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.5.0",
@@ -43,6 +44,8 @@
     "eslint-plugin-standard": "^1.3.2",
     "metalsmith": "^2.1.0",
     "mocha": "^2.4.5",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "sync-exec": "^0.6.2"
   },
   "dependencies": {
