--- a/examples/package.json
+++ b/examples/package.json
@@ -8,10 +8,9 @@
   },
   "author": "",
   "dependencies": {
-    "babelify": "^6.0.2",
-    "metalsmith": "^1.3.0",
-    "metalsmith-browserify": "git://github.com/mpd106/metalsmith-browserify",
-    "metalsmith-react-templates": "..",
-    "react": "^0.13.3"
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "metalsmith": "^2.1.0",
+    "metalsmith-react-templates": ".."
   }
 }
