--- a/examples/package.json
+++ b/examples/package.json
@@ -8,9 +8,14 @@
   },
   "author": "",
   "dependencies": {
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "metalsmith": "^2.1.0",
-    "metalsmith-react-templates": ".."
+    "metalsmith-react-templates": "^4.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
