--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "babel-core": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
