--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["es2015", "react", "stage-0"],
-    "plugins": ["add-module-exports"]
+    "presets": ["es2015", "react"],
+    "plugins": ["transform-object-rest-spread", "transform-class-properties"]
 }
