--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,12 @@
-node_modules
-test
 examples
+node_modules
 src
+tests
+.babelrc
 .codeclimate.yml
+.editorconfig
 .travis.yml
-npm.sh
+.eslintignore
+.eslintrc
 circle.yml
+npm.sh
