--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^3.4.0",
     "metalsmith": "^2.2.0",
     "mocha": "^2.4.5",
+    "mocha-junit-reporter": "^1.12.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "sync-exec": "^0.6.2"
