--- a/.editorconfig
+++ b/.editorconfig
@@ -2,11 +2,17 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 4
+indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{js, jsx}]
+quote_type = single
+
+[package.json]
+indent_size = 2
 
 [*.yml]
 indent_size = 2
