--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A metalsmith plugin to render files using ReactJS based templates",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel ./src -d ./lib",
-    "clean": "rm -rf ./lib",
-    "release": "npm run build && npm run publish",
-    "test": "mocha --compilers js:babel-core/register 'tests/specs/**/*.spec.@(js|jsx)'"
+    "build": "cross-env NODE_ENV=production babel src --out-dir lib",
+    "build-library": "npm run clean && npm run build",
+    "clean": "rimraf lib coverage .nyc_output",
+    "coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov",
+    "coveralls": "cross-env NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint --ext js src tests",
+    "test": "cross-env NODE_ENV=test nyc --reporter=text-summary mocha 'tests/**/*.spec.@(js|jsx)'",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -30,36 +34,43 @@
   },
   "homepage": "https://github.com/yeojz/metalsmith-react-templates",
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.22.0",
     "chai": "^3.5.0",
-    "eslint": "^3.4.0",
-    "metalsmith": "^2.2.0",
-    "mocha": "^2.4.5",
-    "mocha-junit-reporter": "^1.12.0",
+    "coveralls": "^2.11.15",
+    "cross-env": "^3.1.4",
+    "eslint": "^3.13.1",
+    "eslint-plugin-react": "^6.9.0",
+    "metalsmith": "^2.3.0",
+    "mocha": "^3.2.0",
+    "nyc": "^10.1.2",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "rimraf": "^2.5.4",
     "sync-exec": "^0.6.2"
   },
   "dependencies": {
     "async": "^2.0.1",
     "debug": "^2.2.0",
+    "lodash": "^4.17.4",
     "lodash.defaults": "^4.2.0",
     "lodash.foreach": "^4.5.0",
     "lodash.forown": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
+    "lodash.unset": "^4.5.2",
     "multimatch": "^2.1.0"
   },
   "peerDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.11.1",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0"
   }
