--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
+dist: trusty
 language: node_js
 node_js:
-  - "4"
-  - "5"
   - "6"
-env:
-  - CXX=g++-4.8
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
+cache:
+  directories:
+    - node_modules
+before_script:
+  - npm run clean
+script:
+  - npm run test
+  - npm run lint
