--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.22.0",
@@ -50,6 +51,9 @@
     "metalsmith": "^2.3.0",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
+    "preact": "^7.2.0",
+    "preact-compat": "^3.13.1",
+    "preact-render-to-string": "^3.6.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "rimraf": "^2.5.4",
