--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "preact-render-to-string": "^3.6.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-router": "^3.0.2",
     "rimraf": "^2.5.4",
     "sync-exec": "^0.6.2"
   },
