--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,8 @@ deployment:
     tag: /^v[0-9]+(\.[0-9]+)*$/
     owner: yeojz
     commands:
-      - npm run build-library
+      - npm run clean
+      - npm run build
       - echo -e "$NPM_USER\n$NPM_PASS\n$NPM_EMAIL" | npm login
       - npm publish
       - npm logout
