--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-router": "^3.0.2",
-    "rimraf": "^2.6.1",
-    "sync-exec": "^0.6.2"
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
     "async": "^2.0.1",
