--- a/circle.yml
+++ b/circle.yml
@@ -11,11 +11,9 @@ test:
   override:
     - npm run test
     - npm run lint
+  post:
+    - npm run coveralls
 deployment:
-  coverage:
-    branch: [master, /^project\/*$/, /^hotfix\/*$/, /^feature\/*$/]
-    commands:
-      - npm run coveralls
   release:
     tag: /^v[0-9]+(\.[0-9]+)*$/
     owner: yeojz
