--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "metalsmith": "^2.3.0",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
-    "preact": "^7.2.0",
+    "preact": "8.1.0",
     "preact-compat": "^3.13.1",
     "preact-render-to-string": "^3.6.0",
+    "prop-types": "^15.5.8",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
-    "react-router": "^3.0.2",
+    "react-router": "4.1.1",
     "rimraf": "^2.6.1"
   },
   "dependencies": {
