--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "metalsmith-react-templates",
   "version": "6.0.3",
-  "description": "A metalsmith plugin to render files using ReactJS based templates",
+  "description": "A metalsmith templating plugin using JSX templates. Supports React / Preact / React-Router etc.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel src --out-dir lib",
-    "clean": "rimraf lib coverage .nyc_output",
+    "build": "npm run build:lib && npm run build:engine",
+    "build:lib": "cross-env NODE_ENV=production babel src --out-dir .",
+    "build:engine": "node ./build-engine.js",
+    "clean": "rimraf lib jsx-render-engine coverage .nyc_output",
     "coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov",
     "coveralls": "cross-env NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint --ext js src tests",
@@ -49,6 +51,7 @@
     "cross-env": "^4.0.0",
     "eslint": "^3.13.1",
     "eslint-plugin-react": "^6.9.0",
+    "execa": "^0.6.3",
     "metalsmith": "^2.3.0",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
