--- a/examples/package.json
+++ b/examples/package.json
@@ -8,14 +8,15 @@
   },
   "author": "",
   "dependencies": {
+    "babel-cli": "^6.0.0",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "metalsmith": "^2.1.0",
-    "metalsmith-react-templates": "^4.0.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-react": "^6.0.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.0.0",
+    "metalsmith": "^2.3.0",
+    "metalsmith-react-templates": "^6.0.0",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   }
 }
