--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-router": "4.1.1",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^2.1.0"
   },
   "dependencies": {
     "async": "^2.0.1",
