--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,18 @@
 {
   "presets": [
-      "es2015",
-      "react"
+    "es2015",
+    "react"
   ],
   "plugins": [
     "transform-class-properties",
     "transform-export-extensions",
     "transform-object-rest-spread"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "rewire"
+      ]
+    }
+  }
 }
