--- a/examples/.babelrc
+++ b/examples/.babelrc
@@ -4,7 +4,6 @@
     "react"
   ],
   "plugins": [
-    "transform-class-properties",
-    "add-module-exports"
+    "transform-class-properties"
   ]
 }
