--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "metalsmith-react-templates",
   "version": "6.0.3",
   "description": "A metalsmith templating plugin using JSX templates. Supports React / Preact / React-Router etc.",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npm run build:lib && npm run build:engine",
     "build:lib": "cross-env NODE_ENV=production babel src --out-dir .",
