--- a/circle.yml
+++ b/circle.yml
@@ -22,9 +22,6 @@ deployment:
       - npm run build:lib
       - echo -e "$NPM_USER\n$NPM_PASS\n$NPM_EMAIL" | npm login
       - npm publish
-      - npm logout
       - npm run build:engine
-      - cd jsx-render-engine
-      - echo -e "$NPM_USER\n$NPM_PASS\n$NPM_EMAIL" | npm login
-      - npm publish
+      - cd jsx-render-engine && npm publish
       - npm logout
